Network/Stage1/us-east-1/VPC-1/SG.tf

resource "aws_security_group" "vpn" {
  name        = "allow-all"
  description = "ALLOW ALL INBOUND/OUTBOUND (testing only)"
  vpc_id      = aws_vpc.vpc_1.id

  ingress {
    description = "All IPv4"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description      = "All IPv6"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    description = "All IPv4"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description      = "All IPv6"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow-all"
  }
}
